fixed buttons on mobile

--- a/css/landing.scss
+++ b/css/landing.scss
@@ -70,3 +70,16 @@ body {
 	
 }
 
+.actions {
+	
+	@media (max-width: 450px){
+		padding: 0px 15px;
+		
+		.btn {
+			width: 100%;
+			margin-bottom: 10px;
+		}
+	}
+	
+}
+
